<resources>
    <string name="app_name">FirebaseExample</string>
    <string name="firebase_auth_mail">メールアドレス</string>
    <string name="firebase_auth_hint_mail">メールアドレスを入力してください</string>
    <string name="firebase_auth_password">パスワード</string>
    <string name="firebase_auth_hint_password">8文字以上16文字以内</string>
    <string name="firebase_auth_register">アカウント登録</string>
    <string name="firebase_auth_register_send">登録</string>
    <string name="firebase_auth_login">ログイン</string>
    <string name="firebase_auth_forget_password">パスワードを忘れたら</string>
    <string name="firebase_auth_forget_password_send">送信</string>
    <string name="firebase_auth_success">ログインしました</string>
    <string name="firebase_auth_error">ログイン失敗</string>
    <string name="firebase_auth_warn_mail">メールアドレスを正しく入力してください</string>
    <string name="firebase_auth_warn_password">パスワードを正しく入力してください</string>

    <string name="navigation_photo">Photo</string>
    <string name="navigation_calender">Calender</string>
    <string name="navigation_maps">Maps</string>
    <string name="navigation_add_pin">Add Pin</string>
    <string name="navigation_account">Account</string>

    <string name="permission_alert_title">設定画面に移動</string>
    <string name="permission_alert_massage">位置情報をONにしてください。</string>

    <string name="logout">ログアウト</string>



</resources>