<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_photo"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        android:title="@string/navigation_photo" />

    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/navigation_calender" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_baseline_public_24"
        android:title="@string/navigation_maps" />

    <item
        android:id="@+id/navigation_add_pin"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/navigation_add_pin" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/navigation_account" />

</menu>