<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--メールアドレスとパスワードの表示-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mailPasswordView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/executeButtonView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mailView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="128dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/mailLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/firebase_auth_mail"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mailEditText"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/mailEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/firebase_auth_hint_mail"
                    android:inputType="textEmailAddress"
                    android:textSize="12dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/mailLabelTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toEndOf="@+id/mailLabelTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mailView">

                <TextView
                    android:id="@+id/passwordLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/firebase_auth_password"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/firebase_auth_hint_password"
                    android:inputType="textPassword"
                    android:textSize="12dp"
                    app:layout_constraintBaseline_toBaselineOf="@id/passwordLabelTextView"
                    app:layout_constraintBottom_toBottomOf="@id/passwordLabelTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toEndOf="@id/passwordLabelTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        executeButton-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/executeButtonView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mailPasswordView">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="220dp"
                android:text="@string/firebase_auth_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/registerSendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="220dp"
                android:text="@string/firebase_auth_register_send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/forgetPasswordSendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="220dp"
                android:text="@string/firebase_auth_forget_password_send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        registerForgetPasswordView-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerForgetPasswordView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/executeButtonView"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firebase_auth_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/forgetPasswordButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/forgetPasswordButton" />

            <Button
                android:id="@+id/forgetPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firebase_auth_forget_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/registerButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>